test/official_tests/method/refer_to_name.lox
class Foo {
  method() {
    print method; // error: {"line":3,"message":"Undefined variable 'method'","type":"RuntimeError"}
  }
}

Foo().method();
